--- a/recommended.html
+++ b/recommended.html
@@ -440,21 +440,21 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="background-image:url(https://i.imgur.com/TBSB8fr.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; overflow: auto; overflow: scroll; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
+<div style="background-image:url(https://i.imgur.com/MgUmFyX.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; overflow: auto; overflow: scroll; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
 
-<div style="background-image:url(https://i.imgur.com/evgRpPG.png); background-size: auto auto; background-repeat: repeat-x; width: 590px; height: 50px; overflow-x: hidden; overflow-y: hidden;"></div>
+<div style="background-image:url(https://i.imgur.com/ZwaLz2R.png); background-size: auto auto; background-repeat: repeat-x; width: 590px; height: 40px; overflow-x: hidden; overflow-y: hidden;"></div>
 <div style= "padding-left: 20%; padding-right: 20%;">
 
-<center><img src="https://i.imgur.com/nkf9kRv.gif"><br><br>
-<font color="#a19489">this is my little archive for sites & blogs i recommend</font></center>
+<center><img src="https://i.imgur.com/DEMpKhV.png"><br><br><br>
+<font color="#a19489">these are some beautiful sites & blogs that i recommend</font></center>
 <br><br>
 
 <div style="line-height:6px;">
 	
 <center>
 
-<font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
-<br><br><br>
+<img src="https://i.imgur.com/WoYT1el.png"><br><br>
+<br><br>
 
 ‌‌<a href="https://luupon.carrd.co" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>
 　<a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
@@ -539,24 +539,24 @@ z-index: 3;
 </center>
 </div>
 
-<br><br>
+<br><br><br>
 <center>
-<font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
+<img src="https://i.imgur.com/WoYT1el.png"><br><br>
 </center>
 <br>
 
-<font color="#ADA49C"><center><sub><img src="https://i.imgur.com/sBg6LRN.gif"></sub>　how to have your site / blog here　<sub><img src="https://i.imgur.com/sBg6LRN.gif"></sub></center><br><br></font><font color="#C7BCA7">
+<font color="#ADA49C"><center>how to have your site / blog here :</center><br><br></font><font color="#c7b3b8">
 　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must have a cute aesthetic and be sfw ;<br>
 　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　send me your button, it should be 88 x 31 px ;<br>
 　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　i also keep here precious inactive sites from web.archive ;<br>
 　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　feel free to recommend my site, i will be very happy !<br>
 　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　my button ( copy the code ) :<br><br>
-</font>
+</font><br>
 <center><img src="https://middlepot.com/button.png"></center><br>
 <center><textarea style="height:12px; width:55px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
-    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/X3UbTE7.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com"><img src="https://middlepot.com/button.png"></a></textarea>
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com"><img src="https://middlepot.com/button.png"></a></textarea>
 </center><br>
 </div>
 <br><br>
