--- a/index.html
+++ b/index.html
@@ -443,14 +443,15 @@ z-index: 3;
 <center>
 
 <center>
-<div id="update" style="background:linear-gradient(to top, #fcf6f2 ,transparent 90%); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 110px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 100%">
-<center><sub><sub><img src="https://i.imgur.com/96xhX4a.gif"></sub></sub>　<font color="#d3a5a5" size=1>updates</font>　<sub><sub><img src="https://i.imgur.com/8rwotzX.gif"></sub></sub></center>
-<br>
-　　06.29 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> update on: <font color="#DFB7B7">/status</font><br>
-　　06.29 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> update on: <font color="#DFB7B7">/recommended</font><br>
-　　06.28 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> update on: <font color="#DFB7B7">/about</font><br>
-　　06.15 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> web page on: <font color="#DFB7B7">/links</font><br>
-　　06.08 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> website on: <font color="#DFB7B7">/poofties</font><br>
+<div id="update" style="background:linear-gradient(to top, #fcf6f2 ,transparent 90%); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 110px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 15px">
+<div style="line-height: 5px"><br></div>
+<div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
+<br></div>
+　　06.29 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> ‌update on: <font color="#DFB7B7">/status</font><br>
+　　06.29 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <font color="#DFB7B7">/recommended</font><br>
+　　06.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <font color="#DFB7B7">/about</font><br>
+　　06.15 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> web page on: <font color="#DFB7B7">/links</font><br>
+　　06.08 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> website on: <font color="#DFB7B7">/poofties</font><br>
 </div>
 </center>
 
