--- a/index.html
+++ b/index.html
@@ -447,11 +447,11 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
-　　07.07 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> sale on: <font color="#DFB7B7">/shybunny</font><br>
-　　07.07 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> game on: <font color="#DFB7B7">/milkywoods</font><br>
-　　06.29 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> ‌update on: <font color="#DFB7B7">/status</font><br>
-　　06.29 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <font color="#DFB7B7">/recommended</font><br>
-　　06.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <font color="#DFB7B7">/about</font><br>
+　　07.07 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> sale on: <a href="/shybunny" style="text-decoration: none;"><font color="#DFB7B7">/shybunny</font></a><br>
+　　07.07 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> game on: <a href="/milkywoods" style="text-decoration: none;"><font color="#DFB7B7">/milkywoods</font></a><br>
+　　06.29 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> ‌update on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
+　　06.29 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
+　　06.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <a href="/about" style="text-decoration: none;"><font color="#DFB7B7">/about</font></a><br>
 </div>
 </center>
 
