--- a/index.html
+++ b/index.html
@@ -447,17 +447,17 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
-　　07.07 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> sale on: <a href="/shybunny" style="text-decoration: none;"><font color="#DFB7B7">/shybunny</font></a><br>
-　　07.07 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> game on: <a href="/milkywoods" style="text-decoration: none;"><font color="#DFB7B7">/milkywoods</font></a><br>
+　　07.10 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> picture on: <a href="/fashion" style="text-decoration: none;"><font color="#DFB7B7">/fashion</font></a><br>
+　　07.07 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> sale on: <a href="/shybunny" style="text-decoration: none;"><font color="#DFB7B7">/shybunny</font></a><br>
+　　07.07 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> game on: <a href="/milkywoods" style="text-decoration: none;"><font color="#DFB7B7">/milkywoods</font></a><br>
 　　06.29 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> ‌update on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
 　　06.29 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
-　　06.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <a href="/about" style="text-decoration: none;"><font color="#DFB7B7">/about</font></a><br>
 </div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2021 . july . 07</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2021 . july . 10</font></font></font>
 <br><br><br>
 
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596"> buy me a coffee </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
