--- a/about.html
+++ b/about.html
@@ -350,6 +350,16 @@ overflow-y:hidden;
 overflow-x:hidden;
 z-index: 2;
  }
+#menu1-2 {
+position: absolute;
+	left: %;
+	top: 70%;
+width: 130px;
+height: 250px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 2;
+ }
 #menu2 {
 position: absolute;
 	left: 23%;
@@ -421,7 +431,8 @@ z-index: 3;
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
 </p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
+<div onselectstart="return false" id="menu1-2">
 　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
