--- a/fashion.html
+++ b/fashion.html
@@ -471,7 +471,7 @@ p { margin: 0; }
 </head>
 <body>
 
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="27px" height="auto" src="https://i.imgur.com/vyiriHe.png"/></sub></sub></sub></sub>　<a data-target="spoilerb1" class="btn-spoiler2">+ outfits</a></font></div>
+<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="27px" height="auto" src="https://i.imgur.com/vyiriHe.png"/></sub></sub></sub></sub>　<a data-target="spoilerb1" class="btn-spoiler2">+ outfit ideas</a></font></div>
 <div id="spoilerb1" class="spoiler-area2 is-closed2">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
@@ -568,11 +568,11 @@ p { margin: 0; }
     loop($btnsb, function($btnb){
         $btnb.addEventListener("click", function(){
             var $spoilerb = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ outfits" ){
-                this.innerHTML = "- outfits";
+            if( this.innerHTML === "+ outfit ideas" ){
+                this.innerHTML = "- outfit ideas";
                 $spoilerb.classList.remove("is-closed2");
             } else {
-                this.innerHTML = "+ outfits";
+                this.innerHTML = "+ outfit ideas";
                 $spoilerb.classList.add("is-closed2");
             }
         });
@@ -597,82 +597,47 @@ p { margin: 0; }
 </style>
 </head>
 <body>
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/9TM1str.png"/></sub></sub></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4">+ pictures</a></font></div>
+<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/9TM1str.png"/></sub></sub></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4">+ my photos</a></font></div>
 <div id="spoilerd1" class="spoiler-area4 is-closed4">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <br><br>
 <br>
 
-<img width="300px" height="auto" src="https://i.imgur.com/o0PDmBe.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/0.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/B8so2rD.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/1.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/O0tSLZP.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/3.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/MiaCpt9.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/4.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/ZPYsPKW.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/5.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/jPxxXZa.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/6.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/y6DLfiR.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/7.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/EuFL4U9.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/KrVGk7H.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/VQkmXQU.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/10.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/TQZWEau.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/11.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/PaLG3Os.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/12.png"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/zxZ3kbh.jpg"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/13.png"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/kt45Abs.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/14.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/5yvnlBA.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/15.png"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/lwarkB9.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/16.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/Y5IXQCm.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/17.jpg"/><br><br>
 <br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/XibVxMw.jpg"/><br><br>
-<br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/tq6Y3Vl.png"/><br><br>
-<br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/xMCVydX.png"/><br><br>
-<br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/Ox3CQli.png"/><br><br>
-<br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/QPf1WS9.png"/><br><br>
-<br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/dR6jOtE.jpg"/><br><br>
-<br>
-
 
 <br><br>
 
@@ -694,11 +659,11 @@ p { margin: 0; }
     loop($btnsd, function($btnd){
         $btnd.addEventListener("click", function(){
             var $spoilerd = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ pictures" ){
-                this.innerHTML = "- pictures";
+            if( this.innerHTML === "+ my photos" ){
+                this.innerHTML = "- my photos";
                 $spoilerd.classList.remove("is-closed4");
             } else {
-                this.innerHTML = "+ pictures";
+                this.innerHTML = "+ my photos";
                 $spoilerd.classList.add("is-closed4");
             }
         });
