--- a/fashion.html
+++ b/fashion.html
@@ -608,6 +608,8 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/1.jpg"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/2.jpg"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/3.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/4.jpg"/><br><br>
