--- a/tips.html
+++ b/tips.html
@@ -578,7 +578,7 @@ your kindness, forever cherished <sub>🌷</sub>
 						return actions.order.create({
 							purchase_units: [{
 								amount: {
-									value: 0.5,//finalValue,
+									value: finalValue,
 									currency_code: currency
 								}
 							}]
