--- a/tips.html
+++ b/tips.html
@@ -374,6 +374,16 @@ overflow-y:hidden;
 overflow-x:hidden;
 z-index: 2;
  }
+#menu1-2 {
+position: absolute;
+	left: 0%;
+	top: 70%;
+width: 130px;
+height: 250px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 2;
+ }
 #menu2 {
 position: absolute;
 	left: 23%;
@@ -444,7 +454,8 @@ z-index: 3;
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
 </p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
+<div onselectstart="return false" id="menu1-2">
 　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
@@ -500,7 +511,7 @@ font-family: verdana; font-size: 9px; letter-spacing:1px; line-height:15px;"></t
 <img src="https://i.imgur.com/m4Arymc.png">
 </div>
 
-<img src="https://i.imgur.com/GG8lZVr.png" style="pointer-events: none; z-index: 12; position: absolute; top:110px; left:360px;">
+<img src="https://i.imgur.com/4X6VI5J.png" style="pointer-events: none; z-index: 12; position: absolute; top:109px; left:359px;">
 <div id="paypal-container" style="z-index: 11; width: 150px; position: absolute; top: 110px; left: 360px;">
 	<div id="paypal-button-container"></div>
 </div>
