--- a/tips.html
+++ b/tips.html
@@ -529,6 +529,7 @@ your kindness, forever cherished <sub>🌷</sub>
 </style>
 
 <div id="messages-container">
+	<div class="messages"><sub>🎗 </sub> <b>nini</b> sent a tip !<br>" i love you & your work so much, everything you do is so wonderful and inspiring for me 🤍🧸"</div>
 	<div class="messages"><sub>🎗 </sub> <b>a little angel</b> sent a tip !<br></div>
 	<div class="messages"><sub>🎗 </sub> <b>a little angel</b> sent a tip !<br></div>
 	<div class="messages"><sub>🎗 </sub> <b>a little angel</b> sent a tip !<br>" ur my idol, thank u for existing ♡ "</div>
