--- a/gaming.html
+++ b/gaming.html
@@ -724,12 +724,12 @@ cutest baby there is.<br>
 　　　community : international<br><br><br>
 
 <div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 180px; line-height:10px; padding:5px;">
-<img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:35px;" src="https://i.imgur.com/XCScYag.png">
+<img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:35px;" src="https://i.imgur.com/1wEj8uk.png">
 
         <script type = "text/javascript">
             var image3 = document.getElementById("fluffy");
             var currentPos = 0;
-            var images3 = ["https://i.imgur.com/SmdDUgJ.png", "https://i.imgur.com/XCScYag.png", "https://i.imgur.com/sGb6MU8.png", "https://i.imgur.com/ldxZYzJ.png", "https://i.imgur.com/4vqp71q.png"]
+            var images3 = ["https://i.imgur.com/1wEj8uk.png", "https://i.imgur.com/a067qLt.png", "https://i.imgur.com/F131O4o.png", "https://i.imgur.com/QCeiE6b.png", "https://i.imgur.com/10iSJZk.png", "https://i.imgur.com/hiCRFud.png"]
 
             function volgendefoto3() {
                 if (++currentPos >= images3.length)
