--- a/help.html
+++ b/help.html
@@ -333,9 +333,7 @@ $(document).ready(function() {
 		var container = document.getElementById('stuff2'); 
 		var scrollTo = document.getElementById(hash);
 		var offset = -20;
-		$(container).animate({
-			scrollTop: $(scrollTo).position().top + offset
-		}, 1000);
+		$(container).scrollTop($(scrollTo).offset().top - $(container).offset().top + $(container).scrollTop()+offset);
 	}
 	//prevent auto scroll to anchor
 	if(originalLocationHash){
