--- a/help.html
+++ b/help.html
@@ -324,32 +324,6 @@ menuuuuuuuuuuuuuuu
 menuuuuuuuuuuuuuuu
 -->
 
-<script>
-var originalLocationHash = window.location.hash;
-window.location.hash = '';
-$(document).ready(function() {
-	function anchorGoto(hash){
-		hash = hash.substring(1, hash.length);
-		var container = document.getElementById('stuff2'); 
-		var scrollTo = document.getElementById(hash);
-		var offset = -20;
-		var pos = scrollTo.offsetTop;
-		container.scrollTop = pos+offset;
-	}
-	//prevent auto scroll to anchor
-	if(originalLocationHash){
-		//goes to place
-		anchorGoto(originalLocationHash);
-	}
-	$('a').click(function(e) {
-		e.preventDefault();
-		var hash = $(this).attr("href");
-		//goes to place
-		anchorGoto(hash);
-	});
-});
-</script>
-
 </head>
 
 
@@ -365,6 +339,17 @@ position: absolute;
 	top: 10%;
 overflow-y:hidden;
 overflow-x:hidden;
+
+}
+#base2 {
+position: absolute;
+	left: 13%;
+	top: 10%;
+width: 935px;
+height: 540px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 5;
  }
 #menu1 {
 position: absolute;
@@ -374,7 +359,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 8;
  }
 #menu1-2 {
 position: absolute;
@@ -384,7 +369,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 9;
  }
 #menu2 {
 position: absolute;
@@ -394,7 +379,7 @@ width: 560px;
 height: 35px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 4;
+z-index: 10;
  }
 #menu3 {
 position: absolute;
@@ -404,7 +389,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 11;
  }
 #stuff {
 position: absolute;
@@ -413,7 +398,7 @@ position: absolute;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
-z-index: 6;
+z-index: 10;
  }
 #aaa {
 position: absolute;
@@ -444,6 +429,10 @@ z-index: 3;
 <div id="everything">
 <div id="base">
 
+<div id="aaa">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
+
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
@@ -466,8 +455,9 @@ z-index: 3;
 <div id="menu3">
 <br><br>
 　　　　　 <a href="/blog" style="text-decoration: none; color:#b29487;">my blog</a>
-</div>
+</div></div>
 
+<div id="base2">
 <div id="stuff">
 
 
