--- a/faq.html
+++ b/faq.html
@@ -341,6 +341,16 @@ position: absolute;
 	top: 10%;
 overflow-y:hidden;
 overflow-x:hidden;
+}
+#base2 {
+position: absolute;
+	left: 13%;
+	top: 10%;
+width: 935px;
+height: 540px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 5;
  }
 #menu1 {
 position: absolute;
@@ -350,7 +360,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 8;
  }
 #menu1-2 {
 position: absolute;
@@ -360,7 +370,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 9;
  }
 #menu2 {
 position: absolute;
@@ -370,7 +380,7 @@ width: 560px;
 height: 35px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 4;
+z-index: 10;
  }
 #menu3 {
 position: absolute;
@@ -380,7 +390,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 11;
  }
 #stuff {
 position: absolute;
@@ -389,7 +399,7 @@ position: absolute;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
-z-index: 6;
+z-index: 10;
  }
 #aaa {
 position: absolute;
@@ -398,7 +408,7 @@ position: absolute;
 width: 100px;
 height: 100px;
 overflow-x:hidden;
-z-index: 3;
+z-index: 11;
  }
 @media screen and (max-width: 1000px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
@@ -420,6 +430,9 @@ z-index: 3;
 <div id="everything">
 <div id="base">
 
+<div id="aaa">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
@@ -444,12 +457,13 @@ z-index: 3;
 <div id="menu3">
 <br><br>
 　　　　　 <a href="/blog" style="text-decoration: none; color:#b29487;">my blog</a>
-</div>
+</div></div>
 
+<div id="base2">
 <div id="stuff">
 
-
 <div style="position:absolute; left:20%; right:20%; line-height: 12px;">
+
 <br><br>
 <center><img src="https://i.imgur.com/f5ywNMK.png"/>
 <br><br>
