--- a/status.html
+++ b/status.html
@@ -459,12 +459,12 @@ z-index: 3;
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px; height: 130px;overflow-x: hidden; padding-left: 275px; padding-top: 252px; z-index: 20; line-height:8px;"><br><br>
 <br>
-<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">a little sleepy ..</font>‌
+<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">happy & anxious..</font>‌
 <br><br>
-<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#cfb6bb" style="font-size:9px;">game design</font><br><br>
+<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#cfb6bb" style="font-size:9px;">game coding</font><br><br>
 ‌‌　　<font color="#cfb6bb" style="font-size:9px;">graphic drawing & editing</font><br><br>
 ‌‌　　<font color="#cfb6bb" style="font-size:9px;">web design commissions</font><br><br>
-‌‌　　<font color="#cfb6bb" style="font-size:9px;">writing advice & poetry</font><br><br>
+‌‌　　<font color="#cfb6bb" style="font-size:9px;">needle felting</font><br><br>
 </div>
 
 
@@ -472,6 +472,9 @@ z-index: 3;
 <div style="padding-left: 140px; padding-top: 75px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 300px; height: 170px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;">
 
+　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>08.11.21</sup></font> <font color="#cfbec2">꒱</font>　happy birthday to me !!!
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>06.29.21</sup></font> <font color="#c4b3b6">꒱</font>　i will take a good rest today.
 
 <br><br><br>
@@ -497,9 +500,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/3ZPNzRB.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>10.05.20</sup></font> <font color="#c4b3b6">꒱</font>　so much to explore !!
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>09.13.20</sup></font> <font color="#cfbec2">꒱</font>　chuuuuuuuu ⊹
 
 
 <br><br>
